test/errors/classes/class_inherits_colon_fail.hy
class Base
{
    Base() {}
}

class Derived : Base
{
    Derived() {}
}

// expect: Use 'inherits' to declare base types